--- a/src/views/cargaProducto.ejs
+++ b/src/views/cargaProducto.ejs
@@ -1,7 +1,11 @@
 <%- include('partials/head'); -%>
+<link rel="stylesheet" href="/css/estilosIndex.css">
+    <link rel="stylesheet" href="/css/estilosTablaGestion.css">
+    <link rel="stylesheet" href="/css/autocomplete.css">
+</head>
 <body>
     <%- include('partials/header'); -%>
-
+<h1><strong>este no se usa</strong></h1>
 <form action="/productos/agregar" method="POST">
     <h1>Cargar Producto</h1>
     <table>
