--- a/src/views/vistaNueva.ejs
+++ b/src/views/vistaNueva.ejs
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión RMA</title>
-    
+    <title>Document</title>
+</head>
+<body>
+    <h1>Cara de papa</h1>
+</body>
+</html>
