--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,6 +5,6 @@
     <a href="/gestion">Gestión de clientes</a>
     <a href="/gestionRMA">Gestion productos</a>
     <a href="/etiquetas">Etiquetas</a>
-    
-    
+    <a href="/cargaRemitente">Gestión remitentes</a>
+    <a href="/stock">Stock</a>
 </header>
